kubernetes manifests/tweeter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: tweeter
  name: tweeter
spec:
  replicas: 1
  selector:
    matchLabels:
      service: tweeter
  template:
    metadata:
      labels:
        service: tweeter
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: tweeter
          name: tweeter
          ports:
            - containerPort: 8080
