kubernetes manifests/tweeter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: tweeter
  name: tweeter
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    service: tweeter
